# mujoco

./: .gitignore  README.md
articles/: 1bc075b4a32aa5.md  mujoco-tb3-modeling.md  mujoco-tb3-physics.md  mujoco-tb3-sim-capi.md
sources/: CMakeLists.txt  run.bash
sources/examples/common/: mujoco_debug.cpp  mujoco_debug.hpp  mujoco_viewer.cpp  mujoco_viewer.hpp
sources/examples/mujoco_capi_call/: CMakeLists.txt  main.cpp
sources/examples/mujoco_drone/: CMakeLists.txt  main.cpp
sources/models/: drone.xml  tb3.xml
